(library
 (name aformat)
 (package soundml)
 (modules aformat)
 (instrumentation
  (backend bisect_ppx))
 (wrapped false))

(library
 (name window)
 (package soundml)
 (libraries nx nx.c)
 (modules window)
 (instrumentation
  (backend bisect_ppx))
 (wrapped false))

(library
 (name utils)
 (package soundml)
 (libraries nx nx.c nx.metal)
 (modules utils)
 (instrumentation
  (backend bisect_ppx))
 (wrapped false))

(library
 (name transform)
 (package soundml)
 (modules transform)
 (libraries nx nx.metal nx.c window utils)
 (instrumentation
  (backend bisect_ppx))
 (wrapped false))

(library
 (name filterbank)
 (package soundml)
 (modules filterbank)
 (libraries nx utils)
 (instrumentation
  (backend bisect_ppx))
 (wrapped false))

(library
 (name soundml)
 (public_name soundml)
 (modules soundml)
 (libraries aformat window io utils transform filterbank)
 (instrumentation
  (backend bisect_ppx)))
