(data_only_dirs vectors audio)

(tests
 (names test_aformat test_write)
 (libraries alcotest soundml)
 (action
  (run %{test})))

(tests
 (names test_vectors test_time)
 (libraries alcotest yojson soundml)
 (package soundml)
 (deps
  generate_vectors.py
  generate_audio.sh
  (source_tree audio))
 (action
  (progn
   (system "mkdir -p audio")
   (system "./generate_audio.sh")
   (system "mkdir -p vectors")
   (system "python3 %{dep:generate_vectors.py}")
   (run %{test}))))
