(include_subdirs qualified)

(library
 (name effects)
 (package soundml)
 (foreign_stubs
  (language cxx)
  (names rubberband_stubs)
  (flags
   :standard
   (:include c_flags.sexp)
   -std=c++23
   -O3))
 (c_library_flags
  (:include c_library_flags.sexp))
 (libraries audio utils owl)
 (wrapped true))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ./time/config/discover.exe)))
