;(library
; (name effects)
; (public_name soundml.effects)
; (instrumentation
;  (backend bisect_ppx))
; (modules
;  time
;  filter
;  fir
;  iir
;  lowpass
;  highpass)
; (libraries audio utils nx)
; (foreign_stubs
;  (language cxx)
;  (names rubberband_stubs)
;  (flags
;   (:standard -O3
;              -fPIC
;              -std=c++11
;              -I/usr/local/include
;              -I/usr/local/include/rubberband
;              -lrubberband
;              -lsamplerate))))
