(include_subdirs qualified)

(library
 (name io)
 (package soundml)
 (foreign_stubs
  (language cxx)
  (names soundml_io)
  (include_dirs cio)
  (flags
   :standard
   (:include c_flags.sexp)
   -std=c++23
   -O3
   -llto))
 (c_library_flags
  (:include c_library_flags.sexp))
 (modules io)
 (libraries audio utils owl)
 (wrapped true))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ./config/discover.exe)))
